--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "dotenv": "^5.0.1",
     "express": "^4.16.3",
     "jquery": "^3.3.1",
+    "mongodb": "^3.1.0-beta4",
     "react": "^16.3.2",
     "react-bootstrap": "^0.32.1",
     "react-dom": "^16.3.2",
